TP1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:38:27 **** Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building file: ../validationFormat.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"validationFormat.d" -MT"validationFormat.o" -o "validationFormat.o" "../validationFormat.cpp"
Finished building: ../validationFormat.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
19:38:30 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:00:46 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../validationFormat.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"validationFormat.d" -MT"validationFormat.o" -o "validationFormat.o" "../validationFormat.cpp"
../validationFormat.cpp: In function ‘bool validerTelephone(const string&)’:
../validationFormat.cpp:64:67: error: too many initializers for ‘std::__cxx11::string [39] {aka std::__cxx11::basic_string<char> [39]}’
     "881", "882", "883", "884", "885", "886", "887", "888", "889" };
                                                                   ^
subdir.mk:21 : la recette pour la cible « validationFormat.o » a échouée
make: *** [validationFormat.o] Erreur 1
20:00:54 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../validationFormat.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"validationFormat.d" -MT"validationFormat.o" -o "validationFormat.o" "../validationFormat.cpp"
../validationFormat.cpp: In function ‘bool validerTelephone(const string&)’:
../validationFormat.cpp:64:67: error: too many initializers for ‘std::__cxx11::string [39] {aka std::__cxx11::basic_string<char> [39]}’
     "881", "882", "883", "884", "885", "886", "887", "888", "889" };
                                                                   ^
make: *** [validationFormat.o] Erreur 1
subdir.mk:21 : la recette pour la cible « validationFormat.o » a échouée
20:01:51 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../validationFormat.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"validationFormat.d" -MT"validationFormat.o" -o "validationFormat.o" "../validationFormat.cpp"
Finished building: ../validationFormat.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:01:53 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:02:00 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:02:01 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:02:09 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:02:10 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:02:15 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:02:16 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:02:21 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:02:22 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:02:46 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:02:48 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
20:02:53 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Fonctions
Invoking: GCC C++ Linker
g++  -o "Fonctions"  ./main.o ./validationFormat.o   
Finished building target: Fonctions
 
20:02:53 **** Incremental Build of configuration Debug for project Fonctions ****
make all 
make: rien à faire pour « all ».
